--- a/lab6/report/10-analysis.tex
+++ b/lab6/report/10-analysis.tex
@@ -16,7 +16,8 @@ Cуть алгоритма полного перебора для решения
 Моделирование поведения муравьев связано с распределением феромона на тропе — ребре графа в задаче коммивояжера. При этом вероятность включения ребра в маршрут отдельного муравья пропорциональна количеству феромона на этом ребре, а количество откладываемого феромона пропорционально длине маршрута. Чем короче маршрут, тем больше феромона будет отложено на его ребрах. При этом избежать преждевременной сходимости можно, моделируя отрицательную обратную связь в виде испарения феромона. С учетом особенностей задачи коммивояжера, мы можем описать локальные правила поведения муравьев при выборе пути.
 
 \begin{itemize}
-	\item Муравьи имеют собственную «память» в виде списка уже посещенных городов. Обозначим через $J_{i, k}$ список городов, которые необходимо посетить муравью k, находящемуся в городе i.
+	\item Муравьи имеют собственную «память» в виде списка уже посещенных городов. Обозначим через $J_{i, k}$ список городов, которые необходимо посетить муравью k, находящемуся в городе i.
+
 	\item Муравьи обладают «зрением» — видимость есть эвристическое желание посетить город j, если муравей находится в городе i. Будем считать, что видимость обратно пропорциональна расстоянию между городами i и j — $D_{ij}$: $\eta_{ij} = \frac{1}{D_{ij}}$.
 	\item Муравьи обладают «обонянием» — они могут улавливать след феромона, подтверждающий желание посетить город j из города i, на основании опыта других муравьев. Количество феромона на ребре (i, j) в момент времени t обозначим через $\tau_{ij}(t)$.
 \end{itemize}
@@ -31,7 +32,7 @@ Cуть алгоритма полного перебора для решения
 		0, \textrm{иначе}
 	\end{cases},
 \end{equation}
-где $\alpha - $ параметр влияния длины пути, при $\alpha=0$ алгоритм вырождается до жадного алгоритма (будет выбран ближайший город), $\beta - $ параметр влияния феромона.
+где $\alpha - $ параметр влияния длины пути, $\beta - $ параметр влияния феромона. При $\alpha = 0$ будет выбран ближайший город, что соответствует жадному алгоритму в классической теории оптимизации. Если $\beta=0$ работает лишь феромонное усиление, что влечет за собой быстрое вырождение маршрутов к одному субоптимальному решению \cite{second_article}.
 
 Пройдя ребро (i, j), муравей откладывает на нем некоторое количество феромона, которое должно быть связано с оптимальностью сделанного выбора.
 Пусть $T_{k}(t)$ есть маршрут, пройденный муравьем k к моменту времени t , а $L_{k}(t)$ — длина этого маршрута. Пусть также Q — параметр, имеющий значение порядка длины оптимального пути. Тогда откладываемое количество феромона может быть задано в виде \ref{form:fer}:
@@ -44,7 +45,8 @@ Cуть алгоритма полного перебора для решения
 	\end{cases}
 \end{equation}
 
-Правила внешней среды определяют, в первую очередь, испарение феромона. Пусть $p \in [0, 1]$ есть коэффициент испарения, тогда правило испарения имеет вид\ref{form:isp}:
+Правила внешней среды определяют, в первую очередь, испарение феромона. Пусть $p \in [0, 1]$ есть коэффициент испарения, тогда правило испарения имеет вид
+\ref{form:isp}:
 
 \begin{equation}
 	\label{form:isp}
