--- a/lab6/report/02-intro.tex
+++ b/lab6/report/02-intro.tex
@@ -12,5 +12,5 @@
 	\item реализовать алгоритм полного перебора для решения задачи коммивояжера;
 	\item изучить и реализовать муравьиный алгоритм для решения задачи коммивояжера;
 	\item провести параметризацию муравьиного алгоритма на трех классах данных и подобрать оптимальные параметры;
-	\item провести сравнительный анализ трудоемкостей реализаций.
+	\item провести сравнительный анализ времени выполнения и трудоемкостей реализаций.
 \end{enumerate}
