--- a/lab6/report/10-analysis.tex
+++ b/lab6/report/10-analysis.tex
@@ -4,7 +4,7 @@
 
 \section{Задача коммивояжера}
 
-В задаче коммивояжера рассматривается n городов  и матрица попарных расстояний между ними. Требуется найти такой порядок  посещения  городов,  чтобы  суммарное  пройденное  расстояние было минимальным, каждый город посещался ровно один раз и  коммивояжер  вернулся  в  тот  город,  с  которого  начал  свой  маршрут.  Другими  словами,  во  взвешенном  полном  графе  требуется найти гамильтонов цикл минимального веса ~\cite{second_article}. 
+В задаче коммивояжера рассматривается n городов  и матрица попарных расстояний между ними. Требуется найти такой порядок  посещения  городов,  чтобы  суммарное  пройденное  расстояние было минимальным, каждый город посещался ровно один раз, и  коммивояжер  вернулся  в  тот  город,  с  которого  начал  свой  маршрут.  Другими  словами,  во  взвешенном  полном  графе  требуется найти гамильтонов цикл минимального веса ~\cite{second_article}. 
 
 \section{Алгоритм полного перебора для решения задачи коммивояжера}
 
