--- a/lab6/report/30-impl.tex
+++ b/lab6/report/30-impl.tex
@@ -1,6 +1,6 @@
 \chapter{Технологическая часть}
 
-В данном разделе производится выбор средств реализации, приведятся требования к ПО, листинги реализованных алгоритмов решения задачи коммивояжера, а также результаты их тестированиия.
+В данном разделе производится выбор средств реализации, приводятся требования к ПО, листинги реализованных алгоритмов решения задачи коммивояжера, а также результаты их тестированиия.
 
 \section{Требования к ПО}
 
@@ -157,7 +157,7 @@ def count_way_lenth(D, visited_cities):
 \clearpage
 \section{Тестирование}
 
-В таблице ~\ref{tabular:test_rec} приведены функциональные тесты для алгоритмов решения задачи коммивояжера:алгоритма полного перебора и муравьиного алгоритма. Тест считается успешно пройденным, если длина найденного пути совпадает с ожидаемой, а в найденном пути созраняется ожидаемая последовательность городов (то есть город, с которого начинается посследовательность, не является принципиальным). Все тесты пройдены успешно каждым алгоритмом.
+В таблице ~\ref{tabular:test_rec} приведены функциональные тесты для алгоритма решения задачи коммивояжера полным перебором. Все тесты пройдены успешно этим каждым алгоритмом.
 
 \begin{table}[h!]
 	\begin{center}
@@ -198,7 +198,70 @@ def count_way_lenth(D, visited_cities):
 	\end{center}
 \end{table}
 
+Так как муравьиный алгоритм не гарантирует получение точного результата, для его тестирования будем отслеживать выполнение отдельных его этапов. Выберем 'отладочного муравья' и 'отладочную итерацию'. Для муравья будем отслеживать вычисление вероятностей посещения городов, а также конечный выбор очередного города. По итерациям будем отслеживать изменение матрицы феромонов и процесс обновления наиболее оптимального пути. На рисунках ~\ref{fig:x1}-~\ref{fig:x5} приведены результаты тестирования, по которым видно, что ход выполнения программы верный.
+
+
+\clearpage
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.6]{inc/img/x1.png}}
+	
+	\caption{Результаты тестирования муравьиного алгоритма, часть 1}
+	
+	\label{fig:x1}
+	
+\end{figure}
+
+
+\clearpage
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.6]{inc/img/x2.png}}
+	
+	\caption{Результаты тестирования муравьиного алгоритма, часть 2}
+	
+	\label{fig:x2}
+	
+\end{figure}
+
+\clearpage
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.6]{inc/img/x3.png}}
+	
+	\caption{Результаты тестирования муравьиного алгоритма, часть 3}
+	
+	\label{fig:x3}
+	
+\end{figure}
+
+
+\clearpage
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.6]{inc/img/x4.png}}
+	
+	\caption{Результаты тестирования муравьиного алгоритма, часть 4}
+	
+	\label{fig:x4}
+	
+\end{figure}
+
+\clearpage
+\begin{figure}[h!]
+	
+	\centering{\includegraphics[scale=0.6]{inc/img/x5.png}}
+	
+	\caption{Результаты тестирования муравьиного алгоритма, часть 5}
+	
+	\label{fig:x5}
+	
+\end{figure}
+
+
+
+
 
 \section*{Вывод}
 
-Был производен выбор средств реализации, приведены требования к ПО, реализованы и протестированы алгоритмы регения задачи коммивояжера.
+Был производен выбор средств реализации, приведены требования к ПО, реализованы и протестированы алгоритмы решения задачи коммивояжера.
