--- a/lab6/report/50-conclusion.tex
+++ b/lab6/report/50-conclusion.tex
@@ -9,7 +9,7 @@
 	\item реализован алгоритм полного перебора для решения задачи коммивояжера;
 	\item изучен и реализован муравьиный алгоритм для решения задачи коммивояжера;
 	\item проведена параметризаця муравьиного алгоритма на трех классах данных и подобраны оптимальные параметры;
-	\item проведен сравнительный анализ трудоемкостей реализаций.
+	\item проведен сравнительный анализ времени выполнения и трудоемкостей реализаций.
 
 
 \end{enumerate}
