--- a/lab7/report/40-research.tex
+++ b/lab7/report/40-research.tex
@@ -58,19 +58,48 @@
 
 \section{Сравнение времени выполнения реализаций алгоритмов}
 
-Сравнивалось процессорное время работы алгоритма полного перебора и муравьиного алгоритма с параметрами, выбранными в результате параметрзации ($\alpha=0.1$, po=0.75 и tmax=400). Эти реализации сравнивались по времени работы при количестве городов от 3 до 11 с шагом 1.
+Сравнивалось процессорное время работы реализаций алгоритмов поиска в словаре по ключу: алгоритма полного перебора, алогоитма бинарного поиска и алгоритма поиска в сегментированном словаре. Эти реализации сравнивались по времени работы при количестве ключей в словаре 100, 1000, 5000, 10000 и 40000.
+
+Для каждого алгоритма и каждого количества заявок проводилось 2 замера времени. Первый был связан с поиском ключей, которые на самом деле есть в словаре, причем осуществлялся поиск каждого ключа, что позволило сымитировать равновозможность выбора ключа. Второй замер связан с поиском ключей, которых на самом деле нет в словаре. Таких <<несуществующих>> ключей генерировалось столько, сколько всего ключей было в словаре.
  
-Так как некоторые задачи выполняются достаточно быстро, а замеры времени имеют некоторую погрешность, они для каждой реализации и каждого количества заявок выполнялись 10 раз, а затем вычислялось среднее время работы.
+Так как некоторые задачи выполняются достаточно быстро, а замеры времени имеют некоторую погрешность, они для каждой реализации, каждого объема словаря и каждого ключа выполнялись 10 раз, а затем вычислялось среднее время работы.
  
 
-На рисунке \ref{img:time_all} приведены результаты сравнения времени выполнения реализаций алгоритмов. 
+На рисунке \ref{img:time_all} приведены результаты сравнения времени выполнения реализаций алгоритмов. На графике введены следующие обозначения: full\_x - алгоритм полного перебора, binary\_x - алгоритм бинарного поиска, segment\_x - алгоритм поиска в сегментированном словаре, x=e (exists) - время работы соответсвующего алгоритма при поиске существующих ключей, x=n (not exist) -- при поиске несуществующих ключей.
 
 \clearpage
-\img{120mm}{time_all}{Сравнение времени работы реализаций в зависимости от количества городов}
+\img{120mm}{time_all}{Сравнение времени работы реализаций в зависимости от объема словаря}
 
-Как видно из графиков, теоретическая оценка трудоемкости подтвердилась: время работы алгоритма полного перебора растет как O(n!), а муравьиного алгоритма - как O($n^3$), где n - количество городов. В связи с этим при небольшом количестве городов (до 8 включительно) алгоритм полного перебора находит решение за меньшее количество времени по сравнению с муравьиным алгоритмом, однако далее с ростом числа городов начинает все стремительней уступать второму.
+Как видно из графиков, для поиска существующего ключа наибольшее количество процессорного времени требуется алгоритму полного перебора, наименьшее - поиску в сегментированном словаре. Для определения того, что в словаре нет заданного ключа, наибольшее количество процессорного времени требуется опять же алгоритму полного перебора, наименьшее - бинарному поиску. Это различие в <<наилучшем>> алгоритме появляется в результате того, что при поиске несуществующего ключа в сегментированном словаре на бинарный поиск, являющийся его частью, накладывается еще и поиск нужного сегмента.
+
+С увеличением размеров словаря разница во времени работы алгоритмов увеличивается.
+
+%Также можно отметить тот факт, что при использовании алгоритма бинарного поиска и поиска в сегментированном словаре, время поиска существующего ключа меньше времени определения отсутсвия заданного ключа 
 
 
+\section{Количество сравнений}
+
+На рисунках \ref{img:full_k}-\ref{img:segment_kg} приведены гистограммы с количеством сравнений (ось y), которые потребовались рассматриваемым реализациям алгоритмов поиска по ключам в словаре для того, чтобы найти нужный ключ (ось x). Все замеры производились в случае словаря, состоящего из 31 элемента. Для каждой реализации приведены две гистограммы, построенные по одним и тем же данным, но в первой ключи на оси x расположены в том порядке, в котором они хранились в словаре, а во второй -- упорядочены по убыванию потребовавшегося количества сравнений.
+
+
+\img{120mm}{full_k}{Количество сравнений: полный перебор, сортировка по расположению}
+\img{120mm}{full_kg}{Количество сравнений: полный перебор, сортировка по сравнениям}
+
+\img{120mm}{binary_k}{Количество сравнений: бинарный поиск, сортировка по расположению}
+\img{120mm}{binary_kg}{Количество сравнений: бинарный поиск, сортировка по сравнениям}
+
+\img{120mm}{segment_k}{Количество сравнений: поиск в сегментированном словаре, сортировка по расположению}
+\img{120mm}{segment_kg}{Количество сравнений: поиск в сегментированном словаре, сортировка по сравнениям}
+
+Из рисунков \ref{img:full_k} и \ref{img:full_kg} видно, что количество сравнений, необходимых для поиска данного ключа полным перебором определяется только позицией ключа в словаре и равно этой позиции. Наименьшее количество сравнений (1) потребуется для самого первого ключа, наибольшее (N-количество элементов в словаре) - для последнего. Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
+
+Из рисунков \ref{img:binary_k} и \ref{img:binary_kg} видно, что количество сравнений, необходимых для поиска данного ключа бинарным поиском также определяется позицией ключа в словаре, но здесь зависимость более сложная, так как надо учитывать еще и ход разбиения исходного словаря. Наименьшее количество сравнений (1) потребуется для серединного ключа, далее 2 сравнения для элементов на границе 1/4 и 3/4, а наибольшее - $2*\log{N+1} - 1$ (в данном примере для нечетных). Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
+
+Из рисунков \ref{img:segment_k} и \ref{img:segment_kg} видно, что количество сравнений, необходимых для поиска данного ключа в сегментированном словаре определяется не только позицией ключа в своем сегменте, но и размером этого сегмента (так как наибольшие сегменты размещены ближе к началу). Наименьшее количество сравнений (2) потребуется для поиска самого первого ключа в самом большом сегмента, а наибольшее в общем случае определить нельзя: таковым может оказаться, например, ключ на <<неудачной>> позиции в самом большом сегменте или единственный ключ из самого маленького сегмента. Для определения того, что ключа нет в словаре потребуется столько же сравнений, сколько сегментов в словаре, если других ключей, начинающихся на ту же букву нет, а в противном случае -- сумма сравнений для нахождения потенциально подходящего сегмента и определения, что в нем нет искомого ключа.
+
+Таким образом, в общем случае наибольшее количество сравнений требуется в алгоритме полного перебора. Соотношение количества сравнений в бинарном поиске и поиске в сегментированном словаре определяется размером словаря и количеством и размером сегментов в сегментированном словаре.
+
+\clearpage
 \section{Вывод из исследовательской части}
 
 Таким образом, в ситуациях, когда количество городов велико (более 8, например), а задача коммивояжера не требует абсолютно точного ответа, для ее решения можно использовать муравьиный алгоритм вместо алгоритма полного перебора, что позволит сэкономить процессорное время. При этом заранее проведенная параметризация может помочь настроить первый алгоритм так, что и он будет в большинстве случаев выдавать точный ответ. 
