--- a/lab7/report/40-research.tex
+++ b/lab7/report/40-research.tex
@@ -28,23 +28,86 @@
 \end{figure}
 
 
+\section{Количество сравнений}
+
+На рисунках \ref{img:full_k}-\ref{img:segment_kg} приведены гистограммы с количеством сравнений (ось y), которые потребовались рассматриваемым реализациям алгоритмов поиска по ключам в словаре для того, чтобы найти нужный ключ (ось x). Все замеры производились в случае словаря, состоящего из 31 элемента. Для каждой реализации приведены две гистограммы, построенные по одним и тем же данным, но в первой ключи на оси x расположены в том порядке, в котором они хранились в словаре, а во второй -- упорядочены по убыванию потребовавшегося количества сравнений.
+
+\clearpage
+\img{120mm}{full_k}{Количество сравнений: полный перебор, сортировка по расположению}
+\img{120mm}{full_kg}{Количество сравнений: полный перебор, сортировка по сравнениям}
+
+\clearpage
+\img{120mm}{binary_k}{Количество сравнений: бинарный поиск, сортировка по расположению}
+\img{120mm}{binary_kg}{Количество сравнений: бинарный поиск, сортировка по сравнениям}
+
+\clearpage
+\img{120mm}{segment_k}{Количество сравнений: поиск в сегментированном словаре, сортировка по расположению}
+\img{120mm}{segment_kg}{Количество сравнений: поиск в сегментированном словаре, сортировка по сравнениям}
+
+Из рисунков \ref{img:full_k} и \ref{img:full_kg} видно, что количество сравнений, необходимых для поиска данного ключа полным перебором определяется только позицией ключа в словаре и равно этой позиции. Наименьшее количество сравнений (1) потребуется для самого первого ключа, наибольшее (N-количество элементов в словаре) - для последнего. Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
+
+Из рисунков \ref{img:binary_k} и \ref{img:binary_kg} видно, что количество сравнений, необходимых для поиска данного ключа бинарным поиском также определяется позицией ключа в словаре, но здесь зависимость более сложная, так как надо учитывать еще и ход разбиения исходного словаря. Наименьшее количество сравнений (1) потребуется для серединного ключа, далее 2 сравнения для элементов на границе 1/4 и 3/4, а наибольшее - $(2*\log{N+1}) - 1$ (в данном примере для нечетных). Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
+
+Из рисунков \ref{img:segment_k} и \ref{img:segment_kg} видно, что количество сравнений, необходимых для поиска данного ключа в сегментированном словаре определяется не только позицией ключа в своем сегменте, но и размером этого сегмента (так как наибольшие сегменты размещены ближе к началу). Наименьшее количество сравнений (2) потребуется для поиска самого первого ключа в самом большом сегмента, а наибольшее в общем случае определить нельзя: таковым может оказаться, например, ключ на <<неудачной>> позиции в самом большом сегменте или единственный ключ из самого маленького сегмента. Для определения того, что ключа нет в словаре потребуется столько же сравнений, сколько сегментов в словаре, если других ключей, начинающихся на ту же букву нет, а в противном случае -- сумма сравнений для нахождения потенциально подходящего сегмента и определения, что в нем нет искомого ключа.
+
+Таким образом, в общем случае наибольшее количество сравнений требуется в алгоритме полного перебора. Соотношение количества сравнений в бинарном поиске и поиске в сегментированном словаре определяется размером словаря и количеством и размером сегментов в сегментированном словаре.
+
+\clearpage
 \section{Сравнение трудоемкостей реализаций}
-полный перебор
-Трудоёмкость алгоритма зависит от того, присутствует ли искомый ключ в словаре. Если такого ключа нет, то она определяется количеством ключей в словаре, если есть -- его удаленностью от начала массива ключей.
 
-Пусть алгоритм нашёл элемент на первом сравнении (лучший случай), тогда будет затрачено $k_0 + k_1$ операций, на втором - $k_0 + 2 \cdot k_1$, на последнем (худший случай) - $k_0 + N \cdot k_1$. Если ключа нет в массиве ключей, то мы сможем понять это, только перебрав все ключи, таким образом трудоёмкость такого случая равно трудоёмкости случая с ключом на последней позиции. Средняя трудоёмкость может быть рассчитана как математическое ожидание по формуле (\ref{for:brute}), где $\Omega$ -- множество всех возможных случаев.
+Рассмотрим трудоемкости алгоритмов при словаре с N ключами.
 
-\begin{equation}
-	\label{for:brute}
-	\begin{aligned}
-		\sum\limits_{i \in \Omega} p_i \cdot f_i = & (k_0 + k_1) \cdot \frac{1}{N + 1} + (k_0 + 2 \cdot k_1) \cdot \frac{1}{N+1} +\\
-		& + (k_0 + 3 \cdot k_1) \cdot \frac{1}{N + 1} + (k_0 + Nk_1)\frac{1}{N + 1} + (k_0 + N \cdot k_1) \cdot \frac{1}{N + 1} =\\
-		& = k_0\frac{N+1}{N+1}+k_1+\frac{1 + 2 + \cdots + N + N}{N + 1} = \\
-		& = k_0 + k_1 \cdot \left(\frac{N}{N + 1} + \frac{N}{2}\right) = k_0 + k_1 \cdot \left(1 + \frac{N}{2} - \frac{1}{N + 1}\right)
-	\end{aligned}
-\end{equation}
+\begin{itemize}
+	\item Поиск полным перебором
+	\begin{itemize}
+		\item Трудоемкость в среднем может быть рассчитана как математическое ожидание по формуле (\ref{for:brute}), где $\Omega$ -- множество всех возможных случаев.
+		
+		\begin{equation}
+			\label{for:brute}
+			\begin{aligned}
+				\sum\limits_{i \in \Omega} p_i \cdot f_i = \frac{1}{N + 1} \cdot ((\sum\limits_{i \in [1, N]}i) + N) = \\
+				= \frac{1}{N + 1} \cdot (\frac{1 + N}{2} \cdot N + N) \sim \frac{N}{2} + 1
+			\end{aligned}
+		\end{equation}
+			
+		%\begin{equation}
+		%\label{for:brute}
+		%\begin{aligned}
+			%\sum\limits_{i \in \Omega} p_i \cdot f_i = & (k_0 + k_1) \cdot \frac{1}{N + 1} + (k_0 + 2 \cdot k_1) \cdot \frac{1}{N+1} +\\
+		%	& + (k_0 + 3 \cdot k_1) \cdot \frac{1}{N + 1} + (k_0 + Nk_1)\frac{1}{N + 1} + (k_0 + N \cdot k_1) \cdot \frac{1}{N + 1} =\\
+		%& = k_0\frac{N+1}{N+1}+k_1+\frac{1 + 2 + \cdots + N + N}{N + 1} = \\
+			%& = k_0 + k_1 \cdot \left(\frac{N}{N + 1} + \frac{N}{2}\right) = k_0 + k_1 \cdot \left(1 + \frac{N}{2} - \frac{1}{N + 1}\right)
+		%\end{aligned}
+	%\end{equation}
+		
+		\item Лучший случай - когда ключ стоит на первой позиции в словаре, и тогда придется сравнить искомый ключ только один раз, а трудоемскость составит O(1).
+		
+		\item Худший случай - когда ключ стоит на последней позиции в словаре, и тогда придется сравнить искомый ключ с каждым ключом словаря, а трудоемскость составит O(n).
+		
+		\item Добавлять новый элемент в словарь можно на любую позицию, трудоемкость добваления O(1).
 
-сегмент
+	\end{itemize}
+
+
+	\item Бинарный поиск
+	\begin{itemize}
+	\item Трудоемкость в среднем составляет $O(\log{N})$~\cite{second_article}.
+	
+	\item Лучший случай - когда ключ стоит на серединной позиции в словаре, и тогда придется сравнить искомый ключ только один раз, а трудоемскость составит O(1).
+	
+	\item Худший случай - когда ключ стоит на такой позиции, что исходный словарь придется разбивать на части вплоть до того момента, когда левая и правая границы поиска совпадут. Тогда придется сравнить искомый ключ с каждым ключом словаря $(2*\log{N+1}) - 1$ раз и трудоемскость составит $O(\log{N})$.
+	
+	\item Добавлять новый элемент в словарь нужно так, чтобы он остался отсортированным, трудоемкость добваления O(N).
+	
+	\end{itemize}
+
+
+	\item Поиск в сегментированном словаре
+
+\end{itemize}
+
+Трудоемкость определения того, что заданный ключ отсутсвтует в словаре в каждом алгоритме равна трудоемкости худшего случая
+
 
 Средняя трудоёмкость при множестве всех возможных случаев $\Omega$ может быть рассчитана по формуле (\ref{for:anal}). 
 
@@ -54,6 +117,8 @@
 \end{equation}
 
 Возможны два случая определения отсутсвия ключа в словаре. Если в словаре нет ключей, начинающихся на ту же букву, то поиск значения по ключу закончится на этапе поиска нужного сегмента. Иначе понадобится осуществить еще и поиск внутри сегмента.
+
+трудоемкость пополнения словаря
 
 
 \section{Сравнение времени выполнения реализаций алгоритмов}
@@ -74,30 +139,13 @@
 
 С увеличением размеров словаря разница во времени работы алгоритмов увеличивается.
 
+Однако необходимо учитывать, что в случае бинарного поиска может понадобиться время на предварительную сортировку словаря, а в случае поиска в сегментированном словаре - на саму сегментацию словаря и сортировку значений внутри сегментов.
+
+
 %Также можно отметить тот факт, что при использовании алгоритма бинарного поиска и поиска в сегментированном словаре, время поиска существующего ключа меньше времени определения отсутсвия заданного ключа 
 
 
-\section{Количество сравнений}
 
-На рисунках \ref{img:full_k}-\ref{img:segment_kg} приведены гистограммы с количеством сравнений (ось y), которые потребовались рассматриваемым реализациям алгоритмов поиска по ключам в словаре для того, чтобы найти нужный ключ (ось x). Все замеры производились в случае словаря, состоящего из 31 элемента. Для каждой реализации приведены две гистограммы, построенные по одним и тем же данным, но в первой ключи на оси x расположены в том порядке, в котором они хранились в словаре, а во второй -- упорядочены по убыванию потребовавшегося количества сравнений.
-
-
-\img{120mm}{full_k}{Количество сравнений: полный перебор, сортировка по расположению}
-\img{120mm}{full_kg}{Количество сравнений: полный перебор, сортировка по сравнениям}
-
-\img{120mm}{binary_k}{Количество сравнений: бинарный поиск, сортировка по расположению}
-\img{120mm}{binary_kg}{Количество сравнений: бинарный поиск, сортировка по сравнениям}
-
-\img{120mm}{segment_k}{Количество сравнений: поиск в сегментированном словаре, сортировка по расположению}
-\img{120mm}{segment_kg}{Количество сравнений: поиск в сегментированном словаре, сортировка по сравнениям}
-
-Из рисунков \ref{img:full_k} и \ref{img:full_kg} видно, что количество сравнений, необходимых для поиска данного ключа полным перебором определяется только позицией ключа в словаре и равно этой позиции. Наименьшее количество сравнений (1) потребуется для самого первого ключа, наибольшее (N-количество элементов в словаре) - для последнего. Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
-
-Из рисунков \ref{img:binary_k} и \ref{img:binary_kg} видно, что количество сравнений, необходимых для поиска данного ключа бинарным поиском также определяется позицией ключа в словаре, но здесь зависимость более сложная, так как надо учитывать еще и ход разбиения исходного словаря. Наименьшее количество сравнений (1) потребуется для серединного ключа, далее 2 сравнения для элементов на границе 1/4 и 3/4, а наибольшее - $2*\log{N+1} - 1$ (в данном примере для нечетных). Для определения того, что ключа нет в словаре, потребуется столько же сравнений, сколько и для худшего случая.
-
-Из рисунков \ref{img:segment_k} и \ref{img:segment_kg} видно, что количество сравнений, необходимых для поиска данного ключа в сегментированном словаре определяется не только позицией ключа в своем сегменте, но и размером этого сегмента (так как наибольшие сегменты размещены ближе к началу). Наименьшее количество сравнений (2) потребуется для поиска самого первого ключа в самом большом сегмента, а наибольшее в общем случае определить нельзя: таковым может оказаться, например, ключ на <<неудачной>> позиции в самом большом сегменте или единственный ключ из самого маленького сегмента. Для определения того, что ключа нет в словаре потребуется столько же сравнений, сколько сегментов в словаре, если других ключей, начинающихся на ту же букву нет, а в противном случае -- сумма сравнений для нахождения потенциально подходящего сегмента и определения, что в нем нет искомого ключа.
-
-Таким образом, в общем случае наибольшее количество сравнений требуется в алгоритме полного перебора. Соотношение количества сравнений в бинарном поиске и поиске в сегментированном словаре определяется размером словаря и количеством и размером сегментов в сегментированном словаре.
 
 \clearpage
 \section{Вывод из исследовательской части}
