--- a/lab7/report/20-design.tex
+++ b/lab7/report/20-design.tex
@@ -40,7 +40,7 @@
 \clearpage
 \section{Схема алгоритма поиска в сегментированном словаре}
 
-На рисунке \ref{fig:segmentate} приведена схема создания словаря, сегментированного по первым буквам ключей. Такой подход к сегментации выбран, так как он является наиболее нативным для используемого словаря. Предполагается, что обращения ко всем ключам равновероятны, поэтому для ускорения поиска нужного сегмента полным перебором сегментированный словарь упорядочен по убыванию количества пар (ключ: значени) в нем. Пары внутри одого сегмента упорядочены лексикографически по возрастанию ключей для возможности реализации бинарного поиска в пределах сегмента.
+На рисунке \ref{fig:segmentate} приведена схема создания словаря, сегментированного по первым буквам ключей (все буквы английского алфавита). Такой подход к сегментации выбран, так как он является наиболее нативным для используемого словаря. Предполагается, что обращения ко всем ключам равновероятны, поэтому для ускорения поиска нужного сегмента полным перебором сегментированный словарь упорядочен по убыванию количества пар (ключ: значени) в нем. Пары внутри одого сегмента упорядочены лексикографически по возрастанию ключей для возможности реализации бинарного поиска в пределах сегмента.
 
 \clearpage
 \begin{figure}[h!]
